# krcg-cli

./: .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  justfile  pyproject.toml  setup.cfg
.github/workflows/: static.yml  validation.yml
krcg_cli/: __init__.py  __main__.py  parser.py
krcg_cli/subcommands/: _utils.py  affinity.py  build.py  card.py  complete.py  deck.py  format.py  search.py  seating.py  stats.py  top.py  twd.py
stubs/caseconverter/: __init__.pyi
tests/: __init__.py  conftest.py  test_affinity.py  test_build.py  test_card.py  test_complete.py  test_deck.py  test_format.py  test_help.py  test_search.py  test_seating.py  test_top.py  test_twd.py
