[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg-cli"
version = "2.9"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "KRCG Command Line Interface for VTES"
keywords = [
    "vtes",
    "Vampire: The Eternal Struggle",
    "CCG",
    "TWD",
    "TWDA",
    "CLI",
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiohttp",
    "arrow",
    "case-converter",
    "requests",
    "tqdm",
    "unidecode",
    "krcg>=4.13",
]

[project.scripts]
krcg = "krcg_cli:main"

[project.urls]
Repository = "https://github.com/lionel-panhaleux/krcg-cli"


[tool.hatch.build.targets.wheel]
packages = ["krcg_cli"]

[tool.mypy]
mypy_path = "stubs"
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true

[tool.ruff.lint]
select = ["E", "D", "F", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
dev-dependencies = [
    "ipython",
    "mypy",
    "pytest",
    "ruff",
    "types-PyYAML",
    "types-requests",
]
